added arrival information

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
         <th>Latitude</th>
         <th>Time Window</th>
         <th>Route Index</th>
+        <th>Arrival</th>
       </tr>
     </thead>
     <tbody id="addressTable"></tbody>
